<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_projects">

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.example.photocatalog.ui.projects.ProjectsFragment"
        android:label="@string/title_projects">
        
        <action
            android:id="@+id/action_projects_to_create_project"
            app:destination="@id/navigation_create_project"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
            
        <action
            android:id="@+id/action_projects_to_project_detail"
            app:destination="@id/navigation_project_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_project"
        android:name="com.example.photocatalog.ui.projects.CreateProjectFragment"
        android:label="@string/new_project" />

    <fragment
        android:id="@+id/navigation_project_detail"
        android:name="com.example.photocatalog.ui.projects.ProjectDetailFragment"
        android:label="@string/title_project_detail">
        
        <argument
            android:name="projectId"
            app:argType="string" />
            
        <action
            android:id="@+id/action_project_detail_to_edit_project"
            app:destination="@id/navigation_edit_project"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
            
        <action
            android:id="@+id/action_project_detail_to_photo_detail"
            app:destination="@id/navigation_photo_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
            
        <action
            android:id="@+id/action_project_detail_to_camera"
            app:destination="@id/navigation_camera"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_project"
        android:name="com.example.photocatalog.ui.projects.EditProjectFragment"
        android:label="@string/edit_project">
        
        <argument
            android:name="projectId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.photocatalog.ui.camera.CameraFragment"
        android:label="@string/title_camera">
        
        <argument
            android:name="projectId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.example.photocatalog.ui.photos.PhotosFragment"
        android:label="@string/title_photos">
        
        <action
            android:id="@+id/action_photos_to_photo_detail"
            app:destination="@id/navigation_photo_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_photo_detail"
        android:name="com.example.photocatalog.ui.photos.PhotoDetailFragment"
        android:label="@string/photo_detail">
        
        <argument
            android:name="photoId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.photocatalog.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>
